@@ -1,3 +1,15 @@
+2009-06-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	NB#124133 No potrait mode when there is an incoming event preview
+		  in switcher view.
+
+	Naturally, if the poor, otherwise useless client is standing on the
+	top of the window stack.
+
+	* src/mb/hd-note.c:
+	  Override MBWMClientDialog::stacking_layer() for incoming event
+	  notifs.
+
 2009-06-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Release 2.2.56
